--- a/templates/report.html
+++ b/templates/report.html
@@ -7,6 +7,12 @@
 <a href="{{ url_for('entry') }}" class="btn btn-primary">
     <i class='bx bx-plus'></i> New Entry
 </a>
+
+</a>
+<a href="{{ url_for('upload_file') }}" class="btn btn-secondary">
+    <i class='bx bx-upload'></i> Import Excel
+</a>
+
 {% endblock %}
 
 {% block content %}
@@ -23,27 +29,27 @@
             </select>
         </div>
 
-        <!-- Company Filter -->
-        <div class="form-group flex-1 min-w-[200px]">
-            <label for="company">Company</label>
-            <select name="company" id="company" class="form-control">
-                <option value="">All Companies</option>
-                {% for c in companies %}
-                <option value="{{ c }}" {% if request.args.get('company') == c %}selected{% endif %}>{{ c }}</option>
-                {% endfor %}
-            </select>
-        </div>
+<!-- Company Filter -->
+<div class="form-group flex-1 min-w-[200px]">
+    <label for="company">Company</label>
+    <select name="company" id="company" class="form-control">
+        <option value="">All Companies</option>
+        {% for c in companies %}
+        <option value="{{ c }}" {% if request.args.get('company') == c %}selected{% endif %}>{{ c }}</option>
+        {% endfor %}
+    </select>
+</div>
 
-        <!-- Year Filter -->
-        <div class="form-group flex-1 min-w-[150px]">
-            <label for="year">Year</label>
-            <select name="year" id="year" class="form-control">
-                <option value="">All Years</option>
-                {% for y in years %}
-                <option value="{{ y }}" {% if request.args.get('year') == y %}selected{% endif %}>{{ y }}</option>
-                {% endfor %}
-            </select>
-        </div>
+<!-- Year Filter -->
+<div class="form-group flex-1 min-w-[150px]">
+    <label for="year">Year</label>
+    <select name="year" id="year" class="form-control">
+        <option value="">All Years</option>
+        {% for y in years %}
+        <option value="{{ y }}" {% if request.args.get('year') == y %}selected{% endif %}>{{ y }}</option>
+        {% endfor %}
+    </select>
+</div>
 
         <!-- Month Filter -->
         <div class="form-group flex-1 min-w-[150px]">
