Updated Imported Data

--- a/templates/entry.html
+++ b/templates/entry.html
@@ -109,7 +109,20 @@
             </div>
         </div>
 
+        <!-- Date Fields -->
+        <div class="form-group-row">
+            <div class="form-group">
+                <label for="bill_received_date">Bill Received Date</label>
+                <input type="date" name="bill_received_date" id="bill_received_date" class="form-control">
+            </div>
+            <div class="form-group">
+                <label for="bill_disbursed_date">Bill Disbursed Date</label>
+                <input type="date" name="bill_disbursed_date" id="bill_disbursed_date" class="form-control">
+            </div>
+        </div>
+
         <div class="form-actions">
+
             <button type="reset" class="btn btn-secondary">
                 <i class='bx bx-reset'></i> Reset
             </button>
