--- a/templates/upload.html
+++ b/templates/upload.html
@@ -25,10 +25,16 @@
             </div>
         </div>
         
-        <div class="mt-6">
+        <div class="mt-6 flex gap-4">
             <button type="submit" class="btn btn-primary">
                 <i class='bx bx-upload'></i> Upload & Import
             </button>
+            <a href="{{ url_for('export_excel') }}" class="btn btn-success">
+                <i class='bx bx-download'></i> Export to Excel
+            </a>
+            <a href="{{ url_for('export_pdf') }}" class="btn btn-danger">
+                <i class='bx bxs-file-pdf'></i> Export to PDF
+            </a>
         </div>
     </form>
     
